@@ -3,6 +3,10 @@ CHANGELOG RoundCube Webmail
 
 2008/06/24 (alec)
 ----------
+- Patched Mail/MimePart.php (http://pear.php.net/bugs/bug.php?id=14232)
+
+2008/06/24 (alec)
+----------
 - Allow trash/junk subfolders to be purged (#1485085)
 
 2008/06/20 (alec)
